Fixed overflow:hidden clip - chrome

--- a/assets/css/src/partials/_block-link.scss
+++ b/assets/css/src/partials/_block-link.scss
@@ -13,6 +13,8 @@
     display: inline-block;
     position: relative;
     border-radius: 10px;
+    // Fixes the overflow:hidden in Chrome
+    -webkit-mask-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC');
     
     color: #ffffff;
     font-weight: 300;
